--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container mx-auto h-screen">
         <div class="grid place-items-center h-full">
           <!-- card -->
-          <div class="w-80 h-124 bg-white px-4 pt-4 rounded-3xl">
+          <div class="w-80 h-124 bg-white px-4 pt-4 rounded-3xl shadow">
             <div>
               <!-- card image -->
               <div>
@@ -48,7 +48,7 @@
                 <!-- card description -->
                 <div class="flex justify-center">
                   <div class="w-11/12">
-                    <span class="font-normal">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</span>
+                    <span class="font-normal text-grayish-blue">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</span>
                   </div>
                 </div>
               </div>
